update the dates, but not the name of the event

--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -1,14 +1,14 @@
 [general]
-full_uri  = http://act.qa-hackathon.org/qa2016/
+full_uri  = http://act.qa-hackathon.org/qa2017/
 languages = en 
 default_language = en
 default_country  = en
-name_en   = Perl QA Hackathon 2016
-timezone  = Europe/London
+name_en   = Perl QA Hackathon 2017
+timezone  = Europe/Paris
 searchlimit = 50
 
 [registration]
-open = 1
+open = 0
 gratis = 0
 # optional maximum number of attendees
 max_attendees = 30
@@ -22,8 +22,8 @@ notify_accept = 1
 edition_open = 0
 show_schedule = 0
 durations = 20 40 140
-start_date = 2016-04-21 08:00:00
-end_date   = 2016-04-24 23:00:00
+start_date = 2017-05-11 08:00:00
+end_date   = 2017-05-14 23:00:00
 levels = 4
 languages = en
 
@@ -61,5 +61,5 @@ name_en     = You decide
 amount      = 0
 
 [flickr]
-tags = qa2016
+tags = qa2017
 
