update url to PQAH/PTS

--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -1,5 +1,5 @@
 [general]
-full_uri  = http://act.qa-hackathon.org/qa2017/
+full_uri  = http://perltoolchainsummit.org/qa2017/
 languages = en 
 default_language = en
 default_country  = en
